# flora

./: .gitignore  .gitmodules  CHANGELOG.md  Dependencies.lua  Flora.sln  README.md  backlog.txt  controls.txt  index.html  premake5.lua
Fauna/: imgui.ini  premake5.lua
Fauna/Projects/: README.txt
Fauna/docs/: Doxyfile
Fauna/scripting/: MS Paint Legends.csproj  Sandbox Studio.csproj  Sandbox.csproj  Setup.bat  Title.cs  Tower of Icarus.csproj  Towers of Icarus.csproj  (+1 more)
Flora/: BUILD.bazel  Flora.vcxproj  Flora.vcxproj.filters  premake5.lua
Flora-ScriptCore/: Flora-ScriptCore.csproj  premake5.lua
Flora/src/: Flora.h  flpch.cpp  flpch.h  main.cpp  test.cpp  test.h
Flora/src/Flora/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Flora/src/Flora/Audio/: AudioCommand.cpp  AudioCommand.h
Flora/src/Flora/Core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Base.h  Buffer.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  HiddenStructs.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  Timer.h  Timestep.h  Window.cpp  Window.h
Flora/src/Flora/Debug/: Instrumentor.h
Flora/src/Flora/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Flora/src/Flora/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Flora/src/Flora/Math/: Math.cpp  Math.h
Flora/src/Flora/Project/: Label.cpp  Label.h  Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Flora/src/Flora/Renderer/: AssetManager.cpp  AssetManager.h  Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  StaticShaders.cpp  StaticShaders.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Flora/src/Flora/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Flora/src/Flora/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Flora/src/Flora/Utils/: ComponentUtils.cpp  ComponentUtils.h  DeveloperUtils.cpp  DeveloperUtils.h  PhysicsUtils.cpp  PhysicsUtils.h  PlatformUtils.h  Serializer.cpp  Serializer.h  Structures.h  VisualUtils.cpp  VisualUtils.h  YamlUtils.h
Flora/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Flora/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: Sandbox.vcxproj  imgui.ini  premake5.lua
SandboxBuild/: BUILD.bazel  premake5.lua
scripts/: Setup.bat  Setup.py  Vulkan.py
(+268 files in other folders)
